# AstralWfp

./: Cargo.toml  OPTIMIZATION_PLAN.md  README.md  build.rs  filters.xml  manifest.xml  test_filter.ps1
docs/: user_guide.md
src/: astral_wfp.rs  gui.rs  main.rs  nt.rs  test.rs
