[package]
name = "wfp"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
tokio = { version = "1", features = ["full"] }
widestring = { version = "1.0.2", default-features = false, features = ["alloc"] }
winapi = { version = "0.3.9", features = [
    "fileapi",
    "winnt",
    "handleapi",
    "winbase",
    "minwindef",
    "ntdef"
] }

windows = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_WindowsFilteringPlatform",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_Rpc",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_Networking_WinSock",
    "Win32_System_Threading",
    "Win32_System_IO",
    "Win32_System_SystemInformation",
] }
